--- a/app/src/main/res/layout/activity_todos.xml
+++ b/app/src/main/res/layout/activity_todos.xml
@@ -6,4 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".TodosActivity">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/todos_rv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:listitem="@layout/todo_item" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
